--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@upstash/redis": "^1.36.0",
     "date-fns": "^4.1.0",
     "elysia": "^1.4.19",
+    "lucide-react": "^0.562.0",
     "nanoid": "^5.1.6",
     "next": "16.1.1",
     "react": "19.2.3",
