--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@elysiajs/eden": "^1.4.6",
     "@tanstack/react-query": "^5.90.12",
+    "@types/bcrypt": "^6.0.0",
     "@upstash/realtime": "^1.0.0",
     "@upstash/redis": "^1.36.0",
+    "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "elysia": "^1.4.19",
     "lucide-react": "^0.562.0",
